[gd_scene load_steps=9 format=3 uid="uid://c85xldxotb6jh"]

[ext_resource type="PackedScene" uid="uid://bxmfqtgggf6ve" path="res://player/tester.glb" id="1_b4c4d"]
[ext_resource type="Script" path="res://player/tester.gd" id="2_ur5yn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_15v4q"]
radius = 0.38

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sng5r"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l0365"]
animation = &"Walking"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_24idx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sng5r")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_l0365")
blend_point_1/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_c6mer"]
nodes/BlendSpace1D/node = SubResource("AnimationNodeBlendSpace1D_24idx")
nodes/BlendSpace1D/position = Vector2(120, 240)
nodes/output/position = Vector2(460, 160)
node_connections = [&"output", 0, &"BlendSpace1D"]

[sub_resource type="SphereShape3D" id="SphereShape3D_881vo"]

[node name="tester" instance=ExtResource("1_b4c4d")]
script = ExtResource("2_ur5yn")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(8.14972e-10, 0.658532, -5.3188e-09)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.101219, -0.000264807, 0.0135792, 0.994771)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(0.083879, 0.000415142, -0.0112401, 0.996412)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(0.0586715, 0.199378, 0.000308887)
bones/3/rotation = Quaternion(-0.0439459, 0.00234322, -0.811712, 0.582397)
bones/4/rotation = Quaternion(-0.0362898, 0.0128226, -0.332907, 0.942174)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(0.0712842, 0.000848592, -0.223144, 0.972175)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.198948, -0.0290447, 0.00706617, 0.979554)
bones/7/rotation = Quaternion(0.0639171, 0.0194365, -0.144877, 0.987192)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.0857772, 0.0187153, -0.179476, 0.979837)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.0936894, 0.0226847, 0.0141097, 0.995243)
bones/10/rotation = Quaternion(0.0419097, 0.0304843, -0.0888326, 0.994697)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(0.10345, -0.0148142, -0.308603, 0.945433)
bones/12/rotation = Quaternion(-0.00534417, 0.000375838, 0.0296276, 0.999547)
bones/13/rotation = Quaternion(0.00739822, 0.00775215, -0.150644, 0.98853)
bones/14/rotation = Quaternion(-0.00985046, 0.0139382, -0.253063, 0.967299)
bones/15/rotation = Quaternion(0.112314, -0.000103831, 0.0135002, 0.993581)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-0.0975945, 0.000883556, -0.0340599, 0.994643)
bones/17/rotation = Quaternion(0.0803981, -0.011344, -0.330717, 0.940231)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.310948, -0.0143828, 0.102768, 0.944745)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.0179618, 0.00278789, -0.0561577, 0.998256)
bones/20/rotation = Quaternion(-0.00990386, 0.014878, -0.0363638, 0.999179)
bones/21/position = Vector3(-0.0585843, 0.198642, 0.000343556)
bones/21/rotation = Quaternion(-0.038681, 0.00116002, 0.815452, 0.57753)
bones/22/rotation = Quaternion(-0.0360134, -0.0135793, 0.352553, 0.935)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(0.071137, -0.000881364, 0.231761, 0.970168)
bones/23/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.0600533, 0.00776483, 0.0722812, 0.995544)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(0.0750214, 0.0223695, -0.0675713, 0.994638)
bones/26/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(0.02616, -0.0172562, 0.0136693, 0.999415)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.0525699, 0.029329, 0.0683638, 0.995843)
bones/30/rotation = Quaternion(-0.00534417, -0.000375834, -0.0296276, 0.999547)
bones/31/rotation = Quaternion(-0.00408091, -0.00538477, 0.0739522, 0.997239)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-0.0577257, -0.00209445, 0.00880429, 0.998291)
bones/33/rotation = Quaternion(0.112314, 0.000103845, -0.0135002, 0.993581)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(-0.108689, -0.0095364, -0.0427158, 0.993112)
bones/35/rotation = Quaternion(0.0350156, -0.011413, 0.0910092, 0.995169)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(0.310948, 0.0143828, -0.102768, 0.944745)
bones/37/rotation = Quaternion(0.0179618, -0.00278787, 0.0561577, 0.998256)
bones/38/rotation = Quaternion(-0.00990392, -0.014878, 0.0363639, 0.999179)
bones/39/rotation = Quaternion(-0.0235304, 5.09897e-08, 0.00314317, 0.999718)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(4.85829e-14, 7.27595e-12, 3.28782e-10, 1)
bones/41/rotation = Quaternion(0.884629, -3.00875e-11, -0.000130765, 0.466296)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(0.748984, -3.65755e-11, -0.000110714, 0.662589)
bones/43/rotation = Quaternion(0.705365, -3.07936e-11, -0.000104267, 0.708844)
bones/44/rotation = Quaternion(0.00923688, 0.171885, 0.98352, -0.055313)
bones/44/scale = Vector3(1, 1, 0.999999)
bones/45/rotation = Quaternion(-0.350959, 0.00285355, -0.0429353, 0.935402)
bones/46/rotation = Quaternion(0.762872, 0.0139323, -0.00668901, 0.646365)
bones/47/rotation = Quaternion(-0.0102302, 0.171866, 0.984065, 0.0444274)
bones/47/scale = Vector3(1, 1, 0.999998)
bones/48/rotation = Quaternion(-0.350965, -0.00285363, 0.042936, 0.935399)
bones/49/rotation = Quaternion(0.762876, -0.0139325, 0.006689, 0.64636)
bones/49/scale = Vector3(1, 1, 1)
bones/51/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/53/rotation = Quaternion(-0.707107, 0, 0, 0.707107)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CapsuleShape3D_15v4q")

[node name="SpringArmPivot" type="Node3D" parent="." index="3"]
visible = false

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot" index="0"]
collision_mask = 128
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot/SpringArm3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.37829, 0)
cull_mask = 1047551

[node name="AnimationTree" type="AnimationTree" parent="." index="4"]
tree_root = SubResource("AnimationNodeBlendTree_c6mer")
anim_player = NodePath("../AnimationPlayer")
parameters/BlendSpace1D/blend_position = 0.0

[node name="Direction" type="Marker3D" parent="." index="5"]

[node name="ActionableFinder" type="Area3D" parent="Direction" index="0"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Direction/ActionableFinder" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.230567, -0.56815)
shape = SubResource("SphereShape3D_881vo")
